feat(seo/a11y): add meta tags, skip link, and lazy loading
SEO:
- Add Open Graph and Twitter Card meta tags
- Add canonical URL and JSON-LD structured data
- Add theme-color meta tag
- Enhanced description

Accessibility:
- Add skip-to-main-content link (visible on focus)
- Semantic nav element with aria-label
- ARIA labels on logo, theme toggle, menu items
- Focus indicators on nav links
- aria-hidden on decorative SVGs

Performance:
- Add loading="lazy" to all flag images

--- a/index.html
+++ b/index.html
@@ -2,10 +2,60 @@
 <html lang="en" data-theme="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/globe.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Explore the world through data - if Earth had 100 people, where would they live?" />
+
+    <!-- Primary Meta Tags -->
     <title>Globe Explorer - The World in 100 People</title>
+    <meta name="title" content="Globe Explorer - The World in 100 People" />
+    <meta name="description" content="Explore the world through data - if Earth had 100 people, where would they live? Interactive visualizations of global demographics, languages, and country comparisons." />
+    <meta name="author" content="CodeCrank" />
+    <meta name="theme-color" content="#1d232a" />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/globe.svg" />
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://globe-explorer.codecrank.ai/" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://globe-explorer.codecrank.ai/" />
+    <meta property="og:title" content="Globe Explorer - The World in 100 People" />
+    <meta property="og:description" content="Explore the world through data - if Earth had 100 people, where would they live? Interactive visualizations of global demographics, languages, and country comparisons." />
+    <meta property="og:image" content="https://globe-explorer.codecrank.ai/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Globe Explorer" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://globe-explorer.codecrank.ai/" />
+    <meta name="twitter:title" content="Globe Explorer - The World in 100 People" />
+    <meta name="twitter:description" content="Explore the world through data - if Earth had 100 people, where would they live? Interactive visualizations of global demographics, languages, and country comparisons." />
+    <meta name="twitter:image" content="https://globe-explorer.codecrank.ai/og-image.png" />
+
+    <!-- JSON-LD Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebApplication",
+      "name": "Globe Explorer",
+      "description": "Interactive visualizations of global demographics, languages, and country comparisons",
+      "url": "https://globe-explorer.codecrank.ai/",
+      "applicationCategory": "Education",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "author": {
+        "@type": "Organization",
+        "name": "CodeCrank",
+        "url": "https://codecrank.ai"
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="app"></div>
