feat: add favicon.ico and OG image assets
- Create multi-size favicon.ico from gradient globe SVG
- Update globe.svg with blue→green→amber gradient
- Create og-image.png (1200x630) for social sharing
- Add apple-touch-icon link
- Logo on left, features on right, dark theme background

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
     <meta name="author" content="CodeCrank" />
     <meta name="theme-color" content="#1d232a" />
 
-    <!-- Favicon -->
+    <!-- Favicons -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/svg+xml" href="/globe.svg" />
+    <link rel="apple-touch-icon" sizes="32x32" href="/favicon-32.png" />
 
     <!-- Canonical URL -->
     <link rel="canonical" href="https://globe-explorer.codecrank.ai/" />
